2006-07-12  Per Bothner  <per@bothner.com>

	* GetNamedPart.java (inline): Check that class is known.

2006-06-23  Per Bothner  <per@bothner.com>

	* Setter.java: Fix typo in PreProcess comment.

2006-06-16  Per Bothner  <per@bothner.com>

	* GetNamedPart.java (inline): If container implements HasNamedparts,
	optimize for that case.

	* GetNamedPart.java (inline): Warn if no known part.

2006-06-12  Per Bothner  <per@bothner.com>

	* GetNamedPart.java (inline): Update to call getTypeFor in non-lenient
	mode, so we don't interpret a string as a class name, for example.
	* ApplyToArgs.java (inline): Likewise.
	Also call Invoke.checkKnownClass to catch unknown classes.

	* ApplyToArgs.java (inline): Trabslate indexing a List value to call to
	a get method.
	(applyN): If proc is a List value, call List:get method.
	* Setter.java (apply1): If argument is a List, create SetList instance,
	so an application of the latter will call its set method.
	(inline): If argument has List type, create SetListExp for same reason.
	(class SetList): New non-public class, extends Procedure2.
	(class SetListExp): New non-public class, extends ApplyExp.

	* Setter.java (class SetArray): New elementType field.
	(<init>): Set elementType field using langauge and component type.
	(apply2): Coerce value to elementType.

2006-06-10  Per Bothner  <per@bothner.com>

	* GetNamedPart.java (getNamedPart): Move functionality to ...
	(getTypePart, getMemberPart): ... new methods.
	(getNamedPart): Handle container that impleemnts HasNamedParts. Remove
	special support for Namespace - which now implements HasNamedParts.

2006-05-31  Per Bothner  <per@bothner.com>

	* DisplayFormat.java (writeReadableSymbol): Change comment style
	so PreProcess doesn't break it.

2006-05-25  Dean Ferreyra <dferreyra@igc.org>

	* DisplayFormat.java (r5rsIdentifierMinusInteriorColons): A fix
	for Savannah #16660: Additional fix for vertical-bar symbol quoting.

2006-05-16  Per Bothner  <per@bothner.com>
